src/App.css
.container {
  width: 1200px;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 10px;
}

.page-content {
  margin-top: 20px;
  padding: 0 10px;
}

input[type='radio'] {
  margin-inline-end: 5px;
}

/* LoginForm */
.login-form > div {
  margin-block-end: 10px;
}

/* AppHeader */
.app-header {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0 -10px;
  padding: 0 10px;
  border-bottom: 2px solid gray;
}

.app-header > :first-child {
  flex: 1 0 auto;
}

.app-header > :last-child {
  /* TODO need styles here? */
}

/* NavBar */
.nav-bar {
  display: flex;
}

.nav-bar ul {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.nav-bar ul li {
  display: block;
}

.nav-bar ul li a {
  display: block;
  padding: 10px;
}

/* ActiveUser */
.active-user {
  display: flex;
  padding: 10px 0;
  align-items: flex-end;
  gap: 10px;
}

.active-user > :first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.active-user img {
  /* TODO? */
}

/* Avatar image */
.avatar-img {
  display: block;
  width: 50px;
  border-radius: 50%;
}

/* Tabs */
.tabs [role='tablist'] {
  display: flex;
  min-width: 100%;
}

.tabs [role='tab'] {
  display: block;
  position: relative;
  padding: 5px;
  cursor: pointer;
  outline: none;
  border-width: 2px;
  border-bottom-width: 0;
  border-color: gray;
  border-style: solid;
  background: none;
}

.tabs [role='tab']:focus {
  outline: 2px solid black;
  outline-offset: -2px;
}

.tabs [role='tab']:first-child {
  border-inline-end: 0;
}

.tabs [role='tab'][aria-selected='true']::after {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  bottom: -2px;
  height: 2px;
  background-color: white;
}

.tabs [role='tab'][aria-selected='false'] {
  background: rgba(0, 0, 0, 0.07);
}

.tabs [role='tabpanel'] {
  padding: 10px;
  border: 2px solid gray;
}

.tabs [role='tabpanel']:focus {
  outline-color: transparent;
}

/* PollItemList */
.poll-item-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* PollItem */
.poll-item {
  display: flex;
  align-items: center;
}

.poll-item:not(:last-child) {
  margin-block-end: 10px;
}

.poll-item > :first-child {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  flex-grow: 1;
}

.poll-item .user-info {
  display: flex;
  align-items: center;
  margin-inline-end: 10px;
}

.poll-item .user-name {
  font-weight: bold;
}

.poll-item .avatar-img {
  margin-inline-end: 10px;
}

.poll-item .question-info {
  flex: 1 0 auto;
  align-self: flex-start;
}

.poll-item .question-info ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  font-size: 0.75rem;
}

/* PollDetails */
.poll-details {
  position: relative;
  border: 2px solid gray;
  border-radius: 10px;
  padding: 35px 20px 20px;
}

.poll-details-heading {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.poll-details-heading :first-child {
  margin-inline-end: 10px;
}

.poll-details-heading .avatar-img {
  margin-inline-end: 5px;
}

.poll-details .answered-box {
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: 0;
  border-inline-start: 2px solid gray;
  border-block-end: 2px solid gray;
  border-radius: 0 10px;
  padding: 2px;
  background-color: palegreen;
}

.poll-details-content {
  margin-block-start: 30px;
}

/* PollForm */
.poll-form .controls-wrapper:not(:first-child) {
  margin-top: 10px;
}

.poll-form .form-buttons {
  margin-block-start: 10px;
}

.poll-form .form-buttons.secondary {
  display: flex;
  justify-content: flex-end;
}

/* CreatePoll */
.create-poll-form {
  border: 2px solid gray;
  border-radius: 10px;
  padding: 20px;
}

.create-poll-form > div {
  margin-block-end: 10px;
}

.create-poll-form input {
  width: 500px;
  max-width: 100%;
}

.create-poll .form-buttons {
  margin-top: 10px;
}

.create-poll .form-buttons.secondary {
  display: flex;
  justify-content: flex-end;
}

/* Leaderboard */
.leaderboard {
}

.leaderboard-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 10px;
}

.leaderboard-list-item {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
  align-items: center;
  padding: 10px;
}

.leaderboard-list-item:nth-child(even) {
  background-color: rgba(0, 0, 0, 0.07);
}

.leaderboard-list-item .user-info {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-wrap: wrap;
}

.leaderboard-list-item .polls-info {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 5px 20px;
}

